test: 불필요한 Thread.Sleep 제거